footer svg squished look fixed for ie11

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -22,6 +22,7 @@
 
 .Footer-item--logo{
     height: 1rem;
+    width: 1rem;
     margin-right: .5rem; 
 }
 
